--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit
-torch
-torchvision
+torch==2.2.2  # Sesuaikan dengan versi yang kompatibel
+torchvision==0.17.2 # Sesuaikan dengan versi yang kompatibel
 timm
-facenet-pytorch
 Pillow
+opencv-python
+facenet-pytorch==2.6.0 # Pastikan versi facenet-pytorch sesuai
+numpy
